--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "typechain": "^8.1.0"
   },
   "dependencies": {
+    "@aave/core-v3": "^1.13.1",
     "@nomicfoundation/hardhat-toolbox": "^1.0.2",
     "@openzeppelin/contracts": "^4.7.3",
     "dotenv": "^16.0.1",
